--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
-    "hardhat": "^2.7.1"
+    "hardhat": "^2.7.1",
+    "openzeppelin-solidity": "^4.4.0"
   }
 }
